Minor modlog channel tweaks