@@ -15,12 +15,13 @@
  */
 package com.jagrosh.vortex.logging;
 
+import com.jagrosh.vortex.Emoji;
 import com.jagrosh.vortex.Vortex;
 import com.jagrosh.vortex.database.Database.Modlog;
 import com.jagrosh.vortex.logging.MessageCache.CachedMessage;
 import com.jagrosh.vortex.utils.FormatUtil;
 import com.jagrosh.vortex.utils.LogUtil;
-import com.jagrosh.vortex.utils.Usage;
+import com.jagrosh.vortex.utils.OtherUtil;
 import com.typesafe.config.Config;
 import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.Permission;
@@ -31,19 +32,16 @@ import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
 import net.dv8tion.jda.api.events.guild.member.GuildMemberJoinEvent;
 import net.dv8tion.jda.api.events.guild.member.GuildMemberRemoveEvent;
 import net.dv8tion.jda.api.events.guild.voice.GuildVoiceUpdateEvent;
-import net.dv8tion.jda.api.events.message.react.MessageReactionAddEvent;
-import net.dv8tion.jda.api.events.message.react.MessageReactionRemoveAllEvent;
 import net.dv8tion.jda.api.events.user.update.UserUpdateAvatarEvent;
 import net.dv8tion.jda.api.events.user.update.UserUpdateDiscriminatorEvent;
 import net.dv8tion.jda.api.events.user.update.UserUpdateNameEvent;
 import net.dv8tion.jda.api.exceptions.PermissionException;
 import net.dv8tion.jda.api.utils.FileUpload;
+import net.dv8tion.jda.api.utils.TimeFormat;
 
 import java.awt.*;
 import java.time.Instant;
 import java.time.OffsetDateTime;
-import java.time.format.DateTimeFormatter;
-import java.time.temporal.ChronoUnit;
 import java.time.temporal.Temporal;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -55,6 +53,7 @@ import java.util.stream.Collectors;
 /**
  * @author John Grosh (john.a.grosh@gmail.com)
  */
+// TODO: Make sure all values are clamped
 public class BasicLogger {
     private final static String REDIR_MID = "\uD83D\uDD39"; // 🔹
     private final static String REDIR_END = "\uD83D\uDD37"; // 🔷
@@ -133,7 +132,23 @@ public class BasicLogger {
         }
 
         User author = oldMessage.getAuthor(vortex.getJda());
-        log(guild, embedBuilder -> embedBuilder.setColor(Color.yellow).setAuthor(author == null ? getLoggingName(oldMessage) : getLoggingName(guild, author), null, author == null ? null : author.getEffectiveAvatarUrl()).appendDescription("**Message sent by <@" + (author == null ? oldMessage.getAuthorId() : author.getId()) + "> deleted in <#" + oldMessage.getTextChannelId() + ">**\n").appendDescription(formatted).setFooter("Author ID: " + (author == null ? oldMessage.getAuthorId() : author.getId()) + " | Message ID: " + oldMessage.getId(), null).setTimestamp(Instant.now()));
+
+        if (author == null) {
+            log(guild, embedBuilder -> embedBuilder.setColor(Color.yellow)
+                    .setAuthor(getLoggingName(oldMessage), null, null)
+                    .appendDescription(String.format("**Message sent by <@%d> deleted in <#%d>**%n", oldMessage.getAuthorId(), oldMessage.getTextChannelId()))
+                    .appendDescription(formatted)
+                    .setFooter(String.format("Author ID: %s | Message ID: %s", oldMessage.getAuthorId(), oldMessage.getId()), null)
+                    .setTimestamp(Instant.now()));
+        } else {
+            log(guild, embedBuilder -> embedBuilder.setColor(Color.yellow)
+                    .setAuthor(getLoggingName(guild, author), null, author.getEffectiveAvatarUrl())
+                    .appendDescription(String.format("**Message sent by <@%s> deleted in <#%s>**%n", author.getId(), oldMessage.getTextChannelId()))
+                    .appendDescription(formatted)
+                    .setFooter(String.format("Author ID: %d | Message ID: %d", author.getIdLong(), oldMessage.getIdLong()))
+                    .setTimestamp(Instant.now())
+            );
+        }
     }
 
     public void logMessageBulkDelete(List<CachedMessage> messages, int count, TextChannel text) {
@@ -161,11 +176,37 @@ public class BasicLogger {
             logMessageDelete(messages.get(0));
         }
 
-        vortex.getTextUploader().upload(LogUtil.logCachedMessagesForwards("Deleted Messages", messages, vortex.getJda()), "DeletedMessages", (view, download) -> log(guild, embedBuilder -> embedBuilder.setColor(Color.YELLOW).setDescription(String.format("**Bulk delete in %s, %d messages were deleted**\nClick to [view](%s) or [download](%s) the deleted messages.", text.getAsMention(), count, view, download)).setFooter("Channel ID: " + text.getId(), null).setTimestamp(Instant.now())));
+        boolean plural = count != 1;
+        vortex.getTextUploader().upload(
+              LogUtil.logCachedMessagesForwards("Deleted Messages", messages, vortex.getJda()),
+              "DeletedMessages",
+              (view, download) -> {
+                  log(guild, embedBuilder -> embedBuilder.setColor(Color.YELLOW)
+                                                         .setDescription(String.format("**Bulk delete in %s, %d message%s deleted**%nClick to [view](%s) or [download](%s) the deleted message%s.", text.getAsMention(), count, plural ? "s were" : " was", view, download, plural ? "s" : ""))
+                                                         .setFooter("Channel ID: " + text.getId(), null)
+                                                         .setTimestamp(Instant.now())
+                  );
+              }
+        );
     }
 
-    public void postCleanCase(Member moderator, OffsetDateTime now, int numMessages, TextChannel target, String criteria, String reason, String view, String download) {
-        log(target.getGuild(), embedBuilder -> embedBuilder.setColor(Color.YELLOW).setAuthor(getLoggingName(moderator.getGuild(), moderator.getUser()), null, moderator.getUser().getEffectiveAvatarUrl()).appendDescription(String.format("**%s purged %d messages in %s**\n**Criteria:** %s\n%sClick to [view](%s) or [download](%s) the deleted messages.", moderator.getAsMention(), numMessages, target.getAsMention(), criteria, reason == null || reason.trim().isEmpty() ? "" : "**Reason:** " + reason + "\n", view, download)).setFooter("Mod ID: " + moderator.getUser().getId() + " | Channel ID: " + target.getId(), null).setTimestamp(now));
+    public void postCleanCase(Member moderator, OffsetDateTime now, int count, TextChannel target, String criteria, String reason, String view, String download) {
+        boolean plural = count != 1;
+        log(target.getGuild(), embedBuilder -> embedBuilder.setColor(Color.YELLOW)
+                                                           .setAuthor(getLoggingName(moderator.getGuild(), moderator.getUser()), null, moderator.getUser().getEffectiveAvatarUrl())
+                                                           .appendDescription(String.format(
+                                                                   "**%s purged %d message%s from %s**%n**Criteria:** %s%n%sClick to [view](%s) or [download](%s) the deleted message%s.",
+                                                                   moderator.getAsMention(),
+                                                                   count,
+                                                                   plural ? "s" : "",
+                                                                   target.getAsMention(),
+                                                                   criteria,
+                                                                   reason == null || reason.trim().isEmpty() ? "" : "**Reason:** " + reason + "\n",
+                                                                   view,
+                                                                   download,
+                                                                   plural ? "s" : "")
+                                                           ).setFooter(String.format("Mod ID: %s | Channel ID: %s", moderator.getUser().getId(), target.getId()), null)
+                                                           .setTimestamp(now));
     }
 
     //TODO: Will be worked on in the future
@@ -184,61 +225,97 @@ public class BasicLogger {
     }
 
     public void logNameChange(UserUpdateNameEvent event) {
-        OffsetDateTime now = OffsetDateTime.now();
         User user = event.getUser();
-        user.getMutualGuilds().stream().map(guild -> vortex.getDatabase().settings.getSettings(guild).getServerLogChannel(guild)).filter(Objects::nonNull).forEachOrdered(tc -> {
-            log(tc.getGuild(), embedBuilder -> embedBuilder.setAuthor(getLoggingName(tc.getGuild(), user), null, user.getEffectiveAvatarUrl()).setColor(Color.GREEN).setDescription(String.format("**%s has changed their username from %s#%s to %s#%s**", user.getAsMention(), event.getOldName(), user.getDiscriminator(), event.getNewName(), user.getDiscriminator())).setFooter("User ID: " + event.getUser().getId(), null).setTimestamp(now));
+        String oldUsername = FormatUtil.formatUser(event.getOldName(), user.getDiscriminator());
+        String newUsername = FormatUtil.formatUser(event.getOldName(), user.getDiscriminator());
+        OffsetDateTime now = OffsetDateTime.now();
+        user.getMutualGuilds()
+            .stream()
+            .map(guild -> vortex.getDatabase().settings.getSettings(guild)
+            .getServerLogChannel(guild))
+            .filter(Objects::nonNull)
+            .forEachOrdered(tc -> {
+
+                log(tc.getGuild(), embedBuilder -> embedBuilder.setAuthor(getLoggingName(tc.getGuild(), user), null, user.getEffectiveAvatarUrl())
+                                                                .setColor(Color.GREEN)
+                                                                .setDescription(String.format("**%s has changed their username from %s to %s**", user.getAsMention(), FormatUtil.formatUser(event.getOldName(), user.getDiscriminator()), FormatUtil.formatUser(event.getNewName(), user.getDiscriminator())))
+                                                                .setFooter("User ID: " + event.getUser().getId(), null).setTimestamp(now));
         });
     }
 
+    // TODO: Merge with the otehr name update event
     public void logNameChange(UserUpdateDiscriminatorEvent event) {
         if (event.getNewDiscriminator().equals(event.getOldDiscriminator())) { // Weird bug
             return;
         }
 
-        OffsetDateTime now = OffsetDateTime.now();
         User user = event.getUser();
-        event.getUser().getMutualGuilds().stream().map(guild -> vortex.getDatabase().settings.getSettings(guild).getServerLogChannel(guild)).filter(Objects::nonNull).forEachOrdered(tc -> {
-            log(tc.getGuild(), embedBuilder -> embedBuilder.setAuthor(getLoggingName(tc.getGuild(), user), null, user.getEffectiveAvatarUrl()).setColor(Color.GREEN).setDescription(String.format("**%s has changed their username from %s#%s to %s#%s**", user.getAsMention(), user.getName(), event.getOldDiscriminator(), user.getName(), event.getNewDiscriminator())).setFooter("User ID: " + event.getUser().getId(), null).setTimestamp(now));
+        String oldUsername = FormatUtil.formatUser(user.getName(), event.getOldDiscriminator());
+        String newUsername = FormatUtil.formatUser(user.getName(), event.getNewDiscriminator());
+
+        OffsetDateTime now = OffsetDateTime.now();
+        event.getUser()
+             .getMutualGuilds()
+             .stream()
+             .map(guild -> vortex.getDatabase().settings.getSettings(guild).getServerLogChannel(guild))
+             .filter(Objects::nonNull)
+             .forEachOrdered(tc -> {
+                     log(tc.getGuild(), embedBuilder -> embedBuilder.setAuthor(getLoggingName(tc.getGuild(), user), null, user.getEffectiveAvatarUrl())
+                                                                    .setColor(Color.GREEN)
+                                                                    .setDescription(String.format("**%s has changed their username from %s to %s**", user.getAsMention(), oldUsername, newUsername))
+                                                                    .setFooter("User ID: " + event.getUser().getId(), null).setTimestamp(now));
         });
     }
 
     public void logGuildJoin(GuildMemberJoinEvent event, OffsetDateTime now) {
-        long seconds = event.getUser().getTimeCreated().until(now, ChronoUnit.SECONDS);
+        long timeNow = now.toEpochSecond();
+        long timeCreated = event.getUser().getTimeCreated().toEpochSecond();
+
         String newText;
 
-        if (event.getUser().getTimeCreated().isAfter(now)) {
-            newText = "This account has joined \"before\" being created and is deffintly an alt.";
+        Color embedColor;
+        if (timeNow <= timeCreated) {
+            newText = "This account has joined \"before\" being created and is definitely an alt.";
+            embedColor = Color.RED;
         } else {
-            newText = String.format("Account created on %s (%s ago)", event.getUser().getTimeCreated().format(DateTimeFormatter.RFC_1123_DATE_TIME), FormatUtil.secondsToTimeCompact(seconds));
+            embedColor = Color.BLUE;
+            newText = String.format("Account created on %s (%s)", TimeFormat.DATE_TIME_SHORT.format(timeCreated), TimeFormat.RELATIVE.format(timeCreated));
         }
 
         Guild guild = event.getGuild();
         User user = event.getUser();
-        log(guild, embedBuilder -> embedBuilder.setAuthor(getLoggingName(guild, user), null, user.getEffectiveAvatarUrl()).setThumbnail(user.getEffectiveAvatarUrl()).setColor(Color.BLUE).appendDescription("**" + user.getAsMention() + " joined the server**\n").appendDescription(newText).setFooter("User ID: " + user.getId(), null).setTimestamp(now));
+        log(guild, embedBuilder -> embedBuilder.setAuthor(getLoggingName(guild, user), null, user.getEffectiveAvatarUrl())
+                                               .setThumbnail(user.getEffectiveAvatarUrl())
+                                               .setColor(embedColor)
+                                               .appendDescription("**" + user.getAsMention() + " joined the server**\n")
+                                               .appendDescription(newText)
+                                               .setFooter("User ID: " + user.getId(), null)
+                                               .setTimestamp(now));
     }
 
     public void logGuildLeave(GuildMemberRemoveEvent event) {
+        Guild g = event.getGuild();
+        User u = event.getUser();
         OffsetDateTime now = OffsetDateTime.now();
-        long seconds = event.getMember().getTimeJoined().until(now, ChronoUnit.SECONDS);
-        StringBuilder rlist;
-        Member member = event.getMember();
-        Guild guild = event.getGuild();
-        User user = event.getUser();
+        Member m = event.getMember();
 
-        if (member.getRoles().isEmpty()) {
-            rlist = new StringBuilder();
-        } else {
-            rlist = new StringBuilder("\n\nThey had the " + member.getRoles().get(0).getAsMention());
-            int size = member.getRoles().size();
-            for (int i = 1; i < size; i++) {
-                rlist.append("`, `").append(member.getRoles().get(i).getAsMention());
+
+        EmbedBuilder builder = new EmbedBuilder().setAuthor(getLoggingName(g, u), null, u.getEffectiveAvatarUrl())
+                                                 .setThumbnail(u.getEffectiveAvatarUrl())
+                                                 .setColor(Color.BLUE)
+                                                 .appendDescription("**" + u.getAsMention() + " left or was kicked/banned from the server**")
+                                                 .setFooter("User ID: " + u.getId(), null)
+                                                 .setTimestamp(now);
+
+        if (m != null) {
+            if (!m.getRoles().isEmpty()) {
+                builder.addField("Roles", FormatUtil.listOfRolesMention(m.getRoles()), false);
             }
 
-            rlist.append(" role").append(size > 1 ? "s" : "").append(" before leaving");
+            builder.addField("Joined", TimeFormat.DATE_TIME_SHORT.format(m.getTimeJoined()), false);
         }
 
-        log(guild, embedBuilder -> embedBuilder.setAuthor(getLoggingName(guild, user), null, user.getEffectiveAvatarUrl()).setThumbnail(user.getEffectiveAvatarUrl()).setColor(Color.BLUE).appendDescription("**" + user.getAsMention() + " left or was kicked/banned from the server**").appendDescription(String.format("\nThis user originally joined on %s (%s ago)", member.getTimeJoined().format(DateTimeFormatter.RFC_1123_DATE_TIME), FormatUtil.secondsToTimeCompact(seconds))).appendDescription(rlist.toString().isEmpty() ? "" : rlist.toString()).setFooter("User ID: " + user.getId(), null).setTimestamp(now));
+        log(g, builder);
     }
 
     public void logVoiceUpdate(GuildVoiceUpdateEvent event) {
@@ -257,7 +334,12 @@ public class BasicLogger {
         Member member = event.getMember();
         String vcId = event.getChannelJoined().getId();
         User user = member.getUser();
-        log(guild, embedBuilder -> embedBuilder.setAuthor(getLoggingName(guild, user), null, user.getEffectiveAvatarUrl()).setColor(Color.BLUE).appendDescription(String.format("**%s joined the voice channel <#%s>**", user.getAsMention(), vcId)).setFooter("User ID: " + user.getId() + " |  VC ID: " + vcId, null).setTimestamp(OffsetDateTime.now()));
+        log(guild, embedBuilder -> embedBuilder.setAuthor(getLoggingName(guild, user), null, user.getEffectiveAvatarUrl())
+                                               .setColor(Color.BLUE)
+                                               .appendDescription(String.format("**%s joined the voice channel <#%s>**", user.getAsMention(), vcId))
+                                               .setFooter("User ID: " + user.getId() + " |  VC ID: " + vcId, null)
+                                               .setTimestamp(OffsetDateTime.now())
+        );
     }
 
     private void logVoiceMove(GuildVoiceUpdateEvent event) {
@@ -266,7 +348,12 @@ public class BasicLogger {
         String newVcId = event.getChannelJoined().getId();
         String oldVcId = event.getChannelLeft().getId();
         User user = member.getUser();
-        log(guild, embedBuilder -> embedBuilder.setAuthor(getLoggingName(guild, user), null, user.getEffectiveAvatarUrl()).setColor(Color.BLUE).appendDescription(String.format("**%s moved voice channels from <#%s> to <#%s>**", user.getAsMention(), oldVcId, newVcId)).setFooter(String.format("User ID: %s | Old VC Id: %s | New VC ID: %s", user.getId(), oldVcId, newVcId), null).setTimestamp(OffsetDateTime.now()));
+        log(guild, embedBuilder -> embedBuilder.setAuthor(getLoggingName(guild, user), null, user.getEffectiveAvatarUrl())
+                                               .setColor(Color.BLUE)
+                                               .appendDescription(String.format("**%s moved voice channels from <#%s> to <#%s>**", user.getAsMention(), oldVcId, newVcId))
+                                               .setFooter(String.format("User ID: %s | Old VC Id: %s | New VC ID: %s", user.getId(), oldVcId, newVcId), null)
+                                               .setTimestamp(OffsetDateTime.now())
+        );
     }
 
     private void logVoiceLeave(GuildVoiceUpdateEvent event) {
@@ -274,10 +361,16 @@ public class BasicLogger {
         Member member = event.getMember();
         String vcId = event.getChannelLeft().getId();
         User user = member.getUser();
-        log(guild, embedBuilder -> embedBuilder.setAuthor(getLoggingName(guild, user), null, user.getEffectiveAvatarUrl()).setColor(Color.BLUE).appendDescription(String.format("**%s left the voice channel <#%s>**", user.getAsMention(), vcId)).setFooter("User ID: " + user.getId() + " |  VC ID: " + vcId, null).setTimestamp(OffsetDateTime.now()));
+        log(guild, embedBuilder -> embedBuilder.setAuthor(getLoggingName(guild, user), null, user.getEffectiveAvatarUrl())
+                                               .setColor(Color.BLUE)
+                                               .appendDescription(String.format("**%s left the voice channel <#%s>**", user.getAsMention(), vcId))
+                                               .setFooter("User ID: " + user.getId() + " |  VC ID: " + vcId, null)
+                                               .setTimestamp(OffsetDateTime.now())
+        );
     }
 
     // Avatar Logs
+    // TODO: Make look pretty
     public void logAvatarChange(UserUpdateAvatarEvent event) {
         OffsetDateTime now = OffsetDateTime.now();
         List<TextChannel> logs = event.getUser().getMutualGuilds().stream().map(guild -> vortex.getDatabase().settings.getSettings(guild).getAvatarLogChannel(guild)).filter(Objects::nonNull).collect(Collectors.toList());
@@ -292,10 +385,15 @@ public class BasicLogger {
                 logs.forEach(tc -> {
                     Guild guild = tc.getGuild();
                     try {
-                        tc.sendMessage(event.getUser().getAvatarId() != null && event.getUser().getAvatarId().startsWith("a_") ? " <:gif:314068430624129039>" : "").setFiles(FileUpload.fromData(im, "AvatarChange.png")).addEmbeds(new EmbedBuilder().setAuthor(getLoggingName(guild, user), null, user.getEffectiveAvatarUrl()).setColor(Color.BLUE).setDescription("**" + user.getAsMention() + " changed their avatar**").setFooter("User ID: " + user.getId(), null).setTimestamp(now).build()).queue();
-
-                    } catch (PermissionException ignore) {
-                    }
+                        tc.sendMessage(event.getUser().getAvatarId() != null && event.getUser().getAvatarId().startsWith("a_") ? " <:gif:314068430624129039>" : "")
+                          .setFiles(FileUpload.fromData(im, "AvatarChange.png"))
+                          .addEmbeds(new EmbedBuilder().setAuthor(getLoggingName(guild, user), null, user.getEffectiveAvatarUrl())
+                                                       .setColor(Color.BLUE)
+                                                       .setDescription("**" + user.getAsMention() + " changed their avatar**")
+                                                       .setFooter("User ID: " + user.getId(), null)
+                                                       .setTimestamp(now).build()
+                          ).queue();
+                    } catch (PermissionException ignore) {}
                 });
             }
         });
@@ -325,18 +423,46 @@ public class BasicLogger {
             }
         }
 
+
+        User user = OtherUtil.getUserCacheElseRetrieve(guild.getJDA(), modlog.getUserId());
         final String HOW_LONG = howLong;
 
-        User user = guild.getJDA().getUserById(modlog.getUserId());
-        log(guild, embedBuilder -> embedBuilder.setAuthor(getLoggingName(guild, user), null, user.getEffectiveAvatarUrl()).setColor(Color.RED).appendDescription(String.format("<@%d> %s <@%d>%s", punishing ? modlog.getModId() : modlog.getSaviorId(), punishing ? verb : "un" + verb, modlog.getUserId(), HOW_LONG)).setFooter(String.format("User ID: %d | %s ID: %d", modlog.getUserId(), punishing ? "Mod" : "Savior", punishing ? modlog.getModId() : modlog.getSaviorId()), null).appendDescription("\n**Case ID:**" + modlog.getId()).appendDescription(modlog.getReason() == null || modlog.getReason().trim().isEmpty() ? "" : "\n**Reason:**" + modlog.getReason()).setTimestamp(punishing ? modlog.getStart() : modlog.getFinnish()));
+        EmbedBuilder builder = new EmbedBuilder();
+
+        if (user != null) {
+            builder.setAuthor(getLoggingName(guild, user), null, user.getEffectiveAvatarUrl());
+        }
+
+        builder.appendDescription(String.format("<@%d> %s <@%d>%s", punishing ? modlog.getModId() : modlog.getSaviorId(), punishing ? verb : "un" + verb, modlog.getUserId(), HOW_LONG))
+               .addField("Case ID", "" + modlog.getId(), true)
+               .setTimestamp(punishing ? modlog.getStart() : modlog.getFinnish())
+               .setFooter(String.format("User ID: %d | %s ID: %d", modlog.getUserId(), punishing ? "Punisher" : "Pardoner", punishing ? modlog.getModId() : modlog.getSaviorId()), null);
+
+        String reason = modlog.getReason();
+        if (reason != null && !reason.isBlank()) {
+            builder.addField("Reason", FormatUtil.clamp(reason, MessageEmbed.VALUE_MAX_LENGTH), true);
+        }
     }
 
     public void logModlogUpdate(Guild guild, long caseId, User updatingModerator, String oldReason, String newReason, Temporal now) {
-        log(guild, embedBuilder -> embedBuilder.setAuthor(getLoggingName(guild, updatingModerator), null, updatingModerator.getEffectiveAvatarUrl()).setColor(Color.ORANGE.darker()).appendDescription(updatingModerator.getAsMention() + " updated the reason for case " + caseId).addField("Old Reason", oldReason.isEmpty() ? "_No Reason Specified_" : oldReason, false).addField("New Reason", newReason, false).setFooter("Updating Moderator ID: " + updatingModerator.getId(), null).setTimestamp(now));
+        Function<String, String> formatReason = r -> r == null || r.isBlank() ? "_No Reason Specified_" : FormatUtil.clamp(r, MessageEmbed.VALUE_MAX_LENGTH);
+
+        log(guild, embedBuilder -> embedBuilder.setAuthor(getLoggingName(guild, updatingModerator), null, updatingModerator.getEffectiveAvatarUrl())
+                                               .setColor(Color.ORANGE.darker())
+                                               .appendDescription(updatingModerator.getAsMention() + " updated the reason for case " + caseId)
+                                               .addField("Old Reason", formatReason.apply(oldReason), false)
+                                               .addField("New Reason", formatReason.apply(newReason), false)
+                                               .setFooter("Updating Moderator ID: " + updatingModerator.getId(), null)
+                                               .setTimestamp(now)
+        );
     }
 
     public void logModlogDeletion(Guild guild, Modlog modlog, User deletingModerator) {
-        log(guild, embedBuilder -> embedBuilder.setAuthor(getLoggingName(guild, deletingModerator), null, deletingModerator.getEffectiveAvatarUrl()).setColor(Color.ORANGE.darker()).appendDescription(deletingModerator.getAsMention() + " deleted a modlog").addField("Case " + modlog.getId(), FormatUtil.formatModlogCase(vortex, guild, modlog), true).setFooter(String.format("Deleting Moderator ID: %s | User ID: %d | Punishing Moderator ID:%d%s", deletingModerator.getId(), modlog.getUserId(), modlog.getModId(), modlog.getSaviorId() == -1 ? "" : " | Savior ID: " + modlog.getSaviorId()), null).setTimestamp(Instant.now()));
+        log(guild, embedBuilder -> embedBuilder.setAuthor(getLoggingName(guild, deletingModerator), null, deletingModerator.getEffectiveAvatarUrl())
+                                               .setColor(Color.ORANGE.darker())
+                                               .appendDescription(deletingModerator.getAsMention() + " deleted a modlog")
+                                               .addField("Case " + modlog.getId(), FormatUtil.formatModlogCase(vortex, guild, modlog), true)
+                                               .setFooter(String.format("Deleting Moderator ID: %s | User ID: %d | Punisher ID:%d%s", deletingModerator.getId(), modlog.getUserId(), modlog.getModId(), modlog.getSaviorId() == -1 ? "" : " | Pardoner ID: " + modlog.getSaviorId()), null).setTimestamp(Instant.now()));
     }
 
     public void logAuditLogEntry(AuditLogEntry ale) {
@@ -389,9 +515,6 @@ public class BasicLogger {
 
                 builder = embedBuilder -> embedBuilder.setColor(Color.BLUE).setAuthor(getLoggingName(ale), null, getTargetProfilePictureURL(ale)).addField("", field, true).setFooter("User ID: " + ale.getTargetId() + (ale.getUser() == null ? "" : " | Mod ID: " + ale.getUser().getId()), null).setTimestamp(ale.getTimeCreated());
             }
-            case MESSAGE_DELETE -> {
-
-            }
         }
 
         log(guild, builder);
@@ -410,11 +533,12 @@ public class BasicLogger {
 
         Member m = guild.getMember(u);
         String nickname = m == null ? null : m.getNickname();
-        return u.getName() + "#" + u.getDiscriminator() + (nickname != null && !nickname.equals(u.getName()) ? " (" + nickname + ")" : "");
+        boolean hasUniqueNickname = nickname != null && !nickname.equals(u.getName());
+        return FormatUtil.formatUser(u) + (hasUniqueNickname ? " (" + nickname + ")" : "");
     }
 
     public String getLoggingName(CachedMessage m) {
-        return m.getUsername() + "#" + m.getDiscriminator();
+        return FormatUtil.formatUser(m.getUsername(), m.getDiscriminator());
     }
 
     public String getTargetProfilePictureURL(AuditLogEntry ale) {
